[tool.poetry]
name = "netban-client"
version = "0.1.0"
description = "A client library for the netban server."
authors = ["moonburnt <moonburnt@disroot.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = {extras = ["speedups"], version = "^3.11.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
