[tool.poetry]
name = "netban-client"
version = "0.1.0"
description = "A client library for the netban server."
authors = ["moonburnt <moonburnt@disroot.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = {extras = ["speedups"], version = "^3.11.11"}
pydantic = "^2.10.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[tool.ruff]
indent-width = 4
line-length = 80
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
	"E4",
	"E7",
	"E9",
	"F"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
